text and design

--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
     <header>
         <ul>
             <li id="inf-head">
-                <span>Подипски</span>
-                <span>Школы "Мелы"</span>
-                <span>Афиша</span>
+                <span id="mel">МЕЛ</span>
+                <span id="categori-head">Подипски</span>
+                <span id="categori-head">Школы "Мелы"</span>
+                <span id="categori-head">Афиша</span>
             </li>
-            <li id="mel">
-                <span>МЕЛ</span>
+        </ul>
+        <ul>
+            <li id="Sing-up_and_make_blog">
+                <span id="categori-head">написать блог</span>
+                <span id="categori-head">Вход</span>
             </li>
-            <li id=""></li>
         </ul>
     </header>
     <div id="categories">
@@ -58,264 +61,178 @@
     </div>
     <div id="blogs">
         <ul class="blogs-block">
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="Изб">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
+            <ul class="blogs-info">
+                <li>
+                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                </li>
+                <li class="titles">  
+                    <span>БЛОГ</span>
+                </li>
+                <li class="info_about">
+                    <span>fsd</span>
+                </li>
+                <li class="times_view">
+                    <span>sdhffdsh</span>
+                </li>
+            </ul>
+            <ul class="blogs-info">
+                <li>
+                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                </li>
+                <li class="titles">  
+                    <span>БЛОГ</span>
+                </li>
+                <li class="info_about">
+                    <span>fdgdfgfd</span>
+                </li>
+                <li class="times_view">
+                    <span>24352</span>
+                </li>
+            </ul>
+            <ul class="blogs-info">
+                <li>
+                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                </li>
+                <li class="titles">  
+                    <span>БЛОГ</span>
+                </li>
+                <li class="info_about">
+                    <span>jhnhbvcnb</span>
+                </li>
+                <li class="times_view">
+                    <span>4efdf</span>
+                </li>
+            </ul>
+            <ul class="blogs-info">
+                <li>
+                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                </li>
+                <li class="titles">    
+                    <span>БЛОГ</span>
+                </li>
+                <li class="info_about">
+                    <span>fsdf</span>
+                </li>
+                <li class="times_view">
+                    <span></span>
+                </li>
+            </ul>
         </ul>
         <ul class="blogs-block">
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
+            <ul class="blogs-info">
+                <li>
+                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                </li>
+                <li class="titles">  
+                    <span>БЛОГ</span>
+                </li>
+                <li class="info_about">
+                    <span>sdfsdf</span>
+                </li>
+                <li class="times_view">
+                    <span>sdhffdsh</span>
+                </li>
+            </ul>
+            <ul class="blogs-info">
+                <li>
+                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                </li>
+                <li class="titles">  
+                    <span>БЛОГ</span>
+                </li>
+                <li class="info_about">
+                    <span>fdgdfgfd</span>
+                </li>
+                <li class="times_view">
+                    <span>24352</span>
+                </li>
+            </ul>
+            <ul class="blogs-info">
+                <li>
+                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                </li>
+                <li class="titles">  
+                    <span>БЛОГ</span>
+                </li>
+                <li class="info_about">
+                    <span>jhnhbvcnb</span>
+                </li>
+                <li class="times_view">
+                    <span>4efdf</span>
+                </li>
+            </ul>
+            <ul class="blogs-info">
+                <li>
+                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                </li>
+                <li class="titles">    
+                    <span>БЛОГ</span>
+                </li>
+                <li class="info_about">
+                    <span></span>
+                </li>
+                <li class="times_view">
+                    <span>23432</span>
+                </li>
+            </ul>
         </ul>
         <ul class="blogs-block">
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-        </ul>
-        <ul class="blogs-block">
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-        </ul>
-        <ul class="blogs-block">
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-        </ul>
-        <ul class="blogs-block">
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-        </ul>
-        <ul class="blogs-block">
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-        </ul>
-        <ul class="blogs-block">
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-        </ul>
-        <ul class="blogs-block">
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-        </ul>
-        <ul class="blogs-block">
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
-            <li class="blogs-info">
-                <img src="https://picsum.photos/230/?random" height="280px" width="100%" alt="">
-                <span class=""></span>
-                <span class=""></span>
-                <span class=""></span>
-            </li>
+            <ul class="blogs-info">
+                <li>
+                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                </li>
+                <li class="titles">                
+                    <span>БЛОГ</span>
+                </li>
+                <li class="info_about">
+                    <span></span>
+                </li>
+                <li class="times_view">
+                    <span></span>
+                </li>
+            </ul>
+            <ul class="blogs-info">
+                <li>
+                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                </li>
+                <li class="titles">
+                    <span>БЛОГ</span>
+                </li>
+                <li class="info_about">
+                    <spanfsdfasd</span>
+                </li>
+                <li class="times_view">
+                    <span></span>
+                </li>
+            </ul>
+            <ul class="blogs-info">
+                <li>
+                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                <li>
+                </li class="titles">  
+                    <span>БЛОГ</span>
+                </li>
+                <li class="info_about">
+                    <span>sdfsa</span>
+                </li>
+                <li class="times_view">
+                    <span></span>
+                </li>
+            </ul>
+            <ul class="blogs-info">
+                <li>
+                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                </li>
+                <li class="titles">
+                    <span>БЛОГ</span>
+                </li>
+                <li class="info_about">
+                    <span></span>
+                </li>
+                <li class="times_view">
+                    <span></span>
+                </li>
+            </ul>
         </ul>
     </div>
     <div id="e-mail"></div>
