--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>mel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="head-style.css">
     <link rel="stylesheet" href="main-style.css">
     <link rel="stylesheet" href="information-style.css">
@@ -15,18 +16,23 @@
 </head>
 <body>
     <header>
+        <div id="mel">
+            <span>МЕЛ</span>
+        </div>
         <ul>
             <li id="inf-head">
-                <span id="mel">МЕЛ</span>
-                <span id="categori-head">Подипски</span>
-                <span id="categori-head">Школы "Мелы"</span>
-                <span id="categori-head">Афиша</span>
+                <span class="categori-head">Подипски</span>
+                <span class="categori-head">Школы "Мелы"</span>
+                <span class="categori-head">Афиша</span>
             </li>
         </ul>
         <ul>
             <li id="Sing-up_and_make_blog">
-                <span id="categori-head">написать блог</span>
-                <span id="categori-head">Вход</span>
+                <i class="fas fa-search"></i>
+                <i class="fas fa-pen-square">
+                    <span>НАПИСАТЬ В БЛОГ</span>
+                </i>
+                <span id="entrance">ВХОД</span>
             </li>
         </ul>
     </header>
@@ -56,7 +62,6 @@
             <li>
                 <span>БЛОГИ</span>
             </li>
-            <li></li>
         </ul>
     </div>
     <div id="blogs">
@@ -83,10 +88,10 @@
                     <span>БЛОГ</span>
                 </li>
                 <li class="info_about">
-                    <span>fdgdfgfd</span>
+                    <span>6 способов помочь детям полюбить чтение</span>
                 </li>
                 <li class="times_view">
-                    <span>24352</span>
+                    <span>Читать: 3 мин</span>
                 </li>
             </ul>
             <ul class="blogs-info">
@@ -97,10 +102,10 @@
                     <span>БЛОГ</span>
                 </li>
                 <li class="info_about">
-                    <span>jhnhbvcnb</span>
+                    <span>Когда учитель говорит девочкам "Вам же рожать!"</span>
                 </li>
                 <li class="times_view">
-                    <span>4efdf</span>
+                    <span>Читать: 5 мин</span>
                 </li>
             </ul>
             <ul class="blogs-info">
@@ -111,10 +116,10 @@
                     <span>БЛОГ</span>
                 </li>
                 <li class="info_about">
-                    <span>fsdf</span>
+                    <span>Ярмарка тщеславия в школе: конкурсы, проекты, снова конкурсы</span>
                 </li>
                 <li class="times_view">
-                    <span></span>
+                    <span>Читать: 6 мин</span>
                 </li>
             </ul>
         </ul>
@@ -127,10 +132,10 @@
                     <span>БЛОГ</span>
                 </li>
                 <li class="info_about">
-                    <span>sdfsdf</span>
+                    <span></span>
                 </li>
                 <li class="times_view">
-                    <span>sdhffdsh</span>
+                    <span></span>
                 </li>
             </ul>
             <ul class="blogs-info">
@@ -141,10 +146,10 @@
                     <span>БЛОГ</span>
                 </li>
                 <li class="info_about">
-                    <span>fdgdfgfd</span>
+                    <span></span>
                 </li>
                 <li class="times_view">
-                    <span>24352</span>
+                    <span></span>
                 </li>
             </ul>
             <ul class="blogs-info">
@@ -155,10 +160,10 @@
                     <span>БЛОГ</span>
                 </li>
                 <li class="info_about">
-                    <span>jhnhbvcnb</span>
+                    <span></span>
                 </li>
                 <li class="times_view">
-                    <span>4efdf</span>
+                    <span></span>
                 </li>
             </ul>
             <ul class="blogs-info">
@@ -166,64 +171,6 @@
                     <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
                 </li>
                 <li class="titles">    
-                    <span>БЛОГ</span>
-                </li>
-                <li class="info_about">
-                    <span></span>
-                </li>
-                <li class="times_view">
-                    <span>23432</span>
-                </li>
-            </ul>
-        </ul>
-        <ul class="blogs-block">
-            <ul class="blogs-info">
-                <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
-                </li>
-                <li class="titles">                
-                    <span>БЛОГ</span>
-                </li>
-                <li class="info_about">
-                    <span></span>
-                </li>
-                <li class="times_view">
-                    <span></span>
-                </li>
-            </ul>
-            <ul class="blogs-info">
-                <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
-                </li>
-                <li class="titles">
-                    <span>БЛОГ</span>
-                </li>
-                <li class="info_about">
-                    <spanfsdfasd</span>
-                </li>
-                <li class="times_view">
-                    <span></span>
-                </li>
-            </ul>
-            <ul class="blogs-info">
-                <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
-                <li>
-                </li class="titles">  
-                    <span>БЛОГ</span>
-                </li>
-                <li class="info_about">
-                    <span>sdfsa</span>
-                </li>
-                <li class="times_view">
-                    <span></span>
-                </li>
-            </ul>
-            <ul class="blogs-info">
-                <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
-                </li>
-                <li class="titles">
                     <span>БЛОГ</span>
                 </li>
                 <li class="info_about">
@@ -235,7 +182,44 @@
             </ul>
         </ul>
     </div>
-    <div id="e-mail"></div>
-    <div id="information"></div>
+    <div id="e-mail">
+        <ul>
+            <li id="e-mail_mail">
+                <span>Рассылка «Мела»</span>
+            </li>
+            <li id="searching">
+                <input type="text" placeholder="Искать здесь...">
+                <button type="submit"></button>
+            </li>
+            <li id="inf-about-mail">
+                <span>Мы отправляем нашу интересную и очень полезную рассылку два раза в неделю: во вторник и пятницу</span>
+            </li>
+        </ul>
+    </div>
+    <div id="information">
+        <ul>
+            <li id="inf-categories">
+                <span>ДО ШКОЛЫ</span>
+                <span>ШКОЛА</span>
+                <span>ВУЗ</span>
+                <span>ПЕРЕМЕНА</span>
+                <span>СЕМЬЯ</span>
+                <span>ПРОФЕССИИ БУДУЩЕГО</span>
+                <span>ПОДРОСТКИ</span>
+                <span>БЛОГИ</span>
+            </li>
+            <li id="inf">
+                <span>© Мел, 2019</span>
+                <span>Контакты</span>
+                <span>Реклама</span>
+                <span>Пользовательское соглашение</span>
+                <span>Политика конфиденциальности</span>
+                <span>Политика в отношении обработки персональных данны</span>
+                <span>Архив материалов</span>
+                <span>Популярные темы</span>
+            </li>
+            <li></li>
+        </ul>
+    </div>
 </body>
 </html>
