--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>mel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="head-style.css">
-    <link rel="stylesheet" href="main-style.css">
-    <link rel="stylesheet" href="information-style.css">
-    <link rel="stylesheet" href="blogs-style.css">
-    <link rel="stylesheet" href="categories-style.css">
-    <link rel="stylesheet" href="e-mail-style.css">
+    <link rel="stylesheet" href="./css/head-style.css">
+    <link rel="stylesheet" href="./css/main-style.css">
+    <link rel="stylesheet" href="./css/information-style.css">
+    <link rel="stylesheet" href="./css/blogs-style.css">
+    <link rel="stylesheet" href="./css/categories-style.css">
+    <link rel="stylesheet" href="./css/e-mail-style.css">
     <script src="main.js"></script>
 </head>
 <body>
     <header>
-        <div id="mel">
-            <span>МЕЛ</span>
+        <div id="sait-name">
+            <span>мел</span>
         </div>
         <ul>
             <li id="inf-head">
@@ -27,7 +27,7 @@
             </li>
         </ul>
         <ul>
-            <li id="Sing-up_and_make_blog">
+            <li id="sing-up-and-make-blog">
                 <i class="fas fa-search"></i>
                 <i class="fas fa-pen-square">
                     <span>НАПИСАТЬ В БЛОГ</span>
@@ -73,10 +73,10 @@
                 <li class="titles">  
                     <span>БЛОГ</span>
                 </li>
-                <li class="info_about">
+                <li class="info-about">
                     <span>fsd</span>
                 </li>
-                <li class="times_view">
+                <li class="times-view">
                     <span>sdhffdsh</span>
                 </li>
             </ul>
@@ -87,10 +87,10 @@
                 <li class="titles">  
                     <span>БЛОГ</span>
                 </li>
-                <li class="info_about">
+                <li class="info-about">
                     <span>6 способов помочь детям полюбить чтение</span>
                 </li>
-                <li class="times_view">
+                <li class="times-view">
                     <span>Читать: 3 мин</span>
                 </li>
             </ul>
@@ -101,10 +101,10 @@
                 <li class="titles">  
                     <span>БЛОГ</span>
                 </li>
-                <li class="info_about">
+                <li class="info-about">
                     <span>Когда учитель говорит девочкам "Вам же рожать!"</span>
                 </li>
-                <li class="times_view">
+                <li class="times-view">
                     <span>Читать: 5 мин</span>
                 </li>
             </ul>
@@ -115,10 +115,10 @@
                 <li class="titles">    
                     <span>БЛОГ</span>
                 </li>
-                <li class="info_about">
+                <li class="info-about">
                     <span>Ярмарка тщеславия в школе: конкурсы, проекты, снова конкурсы</span>
                 </li>
-                <li class="times_view">
+                <li class="times-view">
                     <span>Читать: 6 мин</span>
                 </li>
             </ul>
@@ -131,24 +131,10 @@
                 <li class="titles">  
                     <span>БЛОГ</span>
                 </li>
-                <li class="info_about">
+                <li class="info-about">
                     <span></span>
                 </li>
-                <li class="times_view">
-                    <span></span>
-                </li>
-            </ul>
-            <ul class="blogs-info">
-                <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
-                </li>
-                <li class="titles">  
-                    <span>БЛОГ</span>
-                </li>
-                <li class="info_about">
-                    <span></span>
-                </li>
-                <li class="times_view">
+                <li class="times-view">
                     <span></span>
                 </li>
             </ul>
@@ -159,10 +145,24 @@
                 <li class="titles">  
                     <span>БЛОГ</span>
                 </li>
-                <li class="info_about">
+                <li class="info-about">
                     <span></span>
                 </li>
-                <li class="times_view">
+                <li class="times-view">
+                    <span></span>
+                </li>
+            </ul>
+            <ul class="blogs-info">
+                <li>
+                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                </li>
+                <li class="titles">  
+                    <span>БЛОГ</span>
+                </li>
+                <li class="info-about">
+                    <span></span>
+                </li>
+                <li class="times-view">
                     <span></span>
                 </li>
             </ul>
@@ -173,10 +173,10 @@
                 <li class="titles">    
                     <span>БЛОГ</span>
                 </li>
-                <li class="info_about">
+                <li class="info-about">
                     <span></span>
                 </li>
-                <li class="times_view">
+                <li class="times-view">
                     <span></span>
                 </li>
             </ul>
@@ -184,11 +184,11 @@
     </div>
     <div id="e-mail">
         <ul>
-            <li id="e-mail_mail">
+            <li id="e-mail-mail">
                 <span>Рассылка «Мела»</span>
             </li>
             <li id="searching">
-                <input type="text" placeholder="Искать здесь...">
+                <input type="text" placeholder="Пиши e-mail...">
                 <button type="submit"></button>
             </li>
             <li id="inf-about-mail">
