--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     </div>
     <div id="e-mail">
         <ul>
-            <li id="e-mail-mail">
+            <li id="name-block">
                 <span>Рассылка «Мела»</span>
             </li>
             <li id="searching">
