--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/blogs-style.css">
     <link rel="stylesheet" href="./css/categories-style.css">
     <link rel="stylesheet" href="./css/e-mail-style.css">
+    <link rel="stylesheet" href="./css/button-style.css">
     <script src="main.js"></script>
 </head>
 <body>
@@ -181,6 +182,9 @@
                 </li>
             </ul>
         </ul>
+    </div>
+    <div id="button">
+        <input type="button" class="knopka01" value="Больше статей">
     </div>
     <div id="e-mail">
         <ul>
