flex and text redesign

--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 </head>
 <body>
     <header>
-        <div id="sait-name">
-            <span>мел</span>
-        </div>
         <ul>
-            <li id="inf-head">
-                <span class="categori-head">Подипски</span>
-                <span class="categori-head">Школы "Мелы"</span>
-                <span class="categori-head">Афиша</span>
+            <li id="sait-name">
+                <a href="">мел</a>
             </li>
-        </ul>
-        <ul>
+            <li id="inf-head">
+                <a href="" class="categori-head">Подипски</a>
+                <a href="" class="categori-head">Школы "Мелы"</a>
+                <a href="" class="categori-head">Афиша</a>
+            </li>
             <li id="sing-up-and-make-blog">
                 <i class="fas fa-search"></i>
-                <i class="fas fa-pen-square">
-                    <span>НАПИСАТЬ В БЛОГ</span>
-                </i>
-                <span id="entrance">ВХОД</span>
+                <a id="blog-write" href="">
+                    <i class="fas fa-pen-square">
+                        <span>НАПИСАТЬ В БЛОГ</pan>
+                    </i>
+                </a>
+                <a href="" id="entrance">ВХОД</a>
             </li>
         </ul>
     </header>
@@ -67,7 +67,7 @@
     </div>
     <div id="blogs">
         <ul class="blogs-block">
-            <ul class="blogs-info">
+            <ul id="first_element" class="blogs-info">
                 <li>
                     <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
                 </li>
@@ -125,7 +125,7 @@
             </ul>
         </ul>
         <ul class="blogs-block">
-            <ul class="blogs-info">
+            <ul id="first_element"  class="blogs-info">
                 <li>
                     <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
                 </li>
@@ -203,24 +203,24 @@
     <div id="information">
         <ul>
             <li id="inf-categories">
-                <span>ДО ШКОЛЫ</span>
-                <span>ШКОЛА</span>
-                <span>ВУЗ</span>
-                <span>ПЕРЕМЕНА</span>
-                <span>СЕМЬЯ</span>
-                <span>ПРОФЕССИИ БУДУЩЕГО</span>
-                <span>ПОДРОСТКИ</span>
-                <span>БЛОГИ</span>
+                <a href="">ДО ШКОЛЫ</a>
+                <a href="">ШКОЛА</a>
+                <a href="">ВУЗ</a>
+                <a href="">ПЕРЕМЕНА</a>
+                <a href="">СЕМЬЯ</a>
+                <a href="">ПРОФЕССИИ БУДУЩЕГО</a>
+                <a href="">ПОДРОСТКИ</a>
+                <a href="">БЛОГИ</a>
             </li>
             <li id="inf">
-                <span>© Мел, 2019</span>
-                <span>Контакты</span>
-                <span>Реклама</span>
-                <span>Пользовательское соглашение</span>
-                <span>Политика конфиденциальности</span>
-                <span>Политика в отношении обработки персональных данны</span>
-                <span>Архив материалов</span>
-                <span>Популярные темы</span>
+                <a href="">© Мел, 2019</a>
+                <a href="">Контакты</a>
+                <a href="">Реклама</a>
+                <a href="">Пользовательское соглашение</a>
+                <a href="">Политика конфиденциальности</a>
+                <a href="">Политика в отношении обработки персональных данны</a>
+                <a href="">Архив материалов</a>
+                <a href="">Популярные темы</a>
             </li>
             <li></li>
         </ul>
